# argos

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DEMO_RUNBOOK.md  Dockerfile  EXPOSICION_ARGOS.html  GUION_GRABACION_TRACKB.html  LICENSE  MEMORIA_ARGOS.md  PLAN_EJECUCION_1JUL.md  PROMPT_CLAUDE_CODE_1JUL.md  PROMPT_CLAUDE_CODE_LAB_REAL.md  PROMPT_CLAUDE_CODE_TRACKB.md  README.md  SECURITY.md  _COORDINACION_INTERMEDIA.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
active-response/: .gitattributes  README.md
active-response/linux/: argos-block-ip.sh  argos-isolate.sh  argos-kill.sh  argos-snapshot.sh  argos-throttle.sh  argos-unblock-ip.sh  argos-unisolate.sh  argos-unthrottle.sh
active-response/ossec/: argos-ar-active-response.conf  argos-ar-commands.conf
active-response/tests/: test_ar_scripts.py  test_ossec_config.py
active-response/windows/: argos-isolate.ps1  argos-kill.ps1  argos-snapshot.ps1  argos-throttle.ps1  argos-unisolate.ps1  argos-unthrottle.ps1
argos_contracts/: README.md  __init__.py  _mitre_data.py  _validators.py  alert.py  approval.py  enums.py  incident.py  ml_score.py  triage.py
argos_contracts/tests/: test_contracts.py
attack-simulation/: README.md
bridge/: __init__.py  __main__.py  mapping.py  ml_publisher.py  requirements.txt  wazuh_bridge.py
bridge/tests/: conftest.py  test_mapping.py  test_ml_publisher.py  test_wazuh_bridge.py
config/: bridge_group_map.example.json  host_inventory.example.json  velociraptor_hosts.example.json
console/: README.md  requirements.txt
console/api/: __init__.py  audit.py  auth.py  main.py  store.py
console/static/: app.js  index.html  styles.css
console/tests/: conftest.py  test_api.py  test_audit_api.py
deception/: README.md  requirements.txt
deception/canary-generator/: config.yaml  generator.py
deception/fim-configs/: ossec-linux.conf  ossec-windows.conf
deception/integrity-check/: verify_canaries.sh
deception/tests/: test_fim_config.py  test_generator.py
deception/wazuh-rules/: canary_rules.xml
demo/cached-responses/: T1078.json  T1083.json  T1190.json
deploy/: README.md
deploy/target-sshd/: Dockerfile  README.md  entrypoint.sh
deploy/tests/: test_compose.py
detection/: README.md  mitre-mapping.yaml  p3_deliverables.md  p3_deployment_guide.md  p3_exposicion.md  p3_validation_matrix.md  requirements.txt
detection/simulators/: README.md  ssh_bruteforce_controlled.py  uc01_lockbit_like.py  uc06_ddos_controlled.py  uc08_sqli_controlled.py
detection/tests/: test_atomic_pairs.py  test_mitre_mapping.py  test_rule_syntax.py  test_simulators.py  test_ssh_bruteforce_rule.py
detection/upstream-prs/: 001-vssadmin-evasion-variants.md
detection/wazuh-rules/: local_rules.xml  ssh_bruteforce_rules.xml
docs/: ARGOS_RUNBOOK_MAESTRO.html  CONTEXT.md  EVALUATION_CRITERIA.md  HANDOFF.md  INSTALL_SSH_VECTOR.md  PROJECT_BRIEF.md  PROJECT_STATUS.md  README.md  RUNBOOK_GRABACION_TRACKB.md  data-handling.md
docs/architecture/: CONTRACTS_SPECIFICATION.md  SOLUTION_ARCHITECTURE_DOCUMENT.md  TECHNICAL_DEBT.md  THREAT_MODEL.md  architecture_diagram.html  argos_flow.drawio  argos_flow.html  network_diagram.drawio  network_diagram_v2.drawio  use_cases_diagrams.drawio
docs/decisions/: 0001-llm-vendor-agnostic.md  0002-heartbeat-default-60s.md  0003-confidence-tiered-automation.md  0004-auto-rollback-rejected.md  0005-notification-channel-abstraction.md  0006-split-brain-resolution.md  0007-notification-multichannel-escalation.md  0008-multi-vector-scope-expansion.md  0009-intibank-scenario.md  0010-demo-operational-decisions.md  0011-soar-implementation-reconciliation.md  0012-response-playbooks.md  0013-soar-orchestration.md  0014-normalization-bridge.md  0015-real-prototype-realization.md  0016-authenticated-approval-callbacks.md  0017-executor-runtime-fail-closed.md  0018-durable-execution-journal.md  0019-wazuh-dispatch-contract.md  OPEN_QUESTIONS_RESOLUTION.md  README.md
docs/operations/: approval-webhooks.md
docs/team/: intro-comun.md  manual-equipo.md  manual-p1-enzo.md  manual-p2-sebastian.md  manual-p3-angeles.md  manual-p4-diego.md  sprint-week-1-common-intro.md  sprint-week-1-overview.md  sprint-week-1-p1-enzo.md  sprint-week-1-p2-sebastian.md  sprint-week-1-p3-angeles.md  sprint-week-1-p4-diego.md  standup-template.md
docs/use-cases/: USE_CASES.md  argos_use_cases.html  argos_use_cases_v2.html
evaluation/: README.md
lab/: Makefile  README.md  RUNBOOK_BOOT_1A.md  Vagrantfile  inventory.yaml
lab/attack-simulation/: README.md
lab/bridge/: wazuh_to_redis.py
lab/postgres/: init.sql  seed.py
llm-triage/: README.md  requirements.txt
llm_triage/: README.md  requirements.txt  sanitizer.py
ml/: README.md  soar_adapter.py
scripts/: _runtime.py  demo_injector.py  demo_reset.py  gen_llm_cache.py  live_approve.py  triage_probe.py  triage_stub.py
soar/: README.md  __init__.py  conftest.py  inventory.py
ui/: README.md  requirements.txt
(+184 files in other folders)
