[project]
name = "argos"
version = "0.2.0"
description = "ARGOS — Adaptive Ransomware Guard with Orchestrated Surveillance. Defense-in-depth ransomware detection (Sigma + ML + canary + LLM triage) with HITL SOAR."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Enzo Ordoñez", email = "enzizoordonezflores@gmail.com" },
]
keywords = ["ransomware", "edr", "siem", "wazuh", "sigma", "soar", "llm", "ciberseguridad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

# El monorepo se compone de módulos independientes con su propio
# requirements.txt para que cada owner pueda iterar sin pisar a los demás.
# Esta sección lista las dependencias core que cualquier módulo necesita.
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Cada owner instala solo lo que necesita:
#   pip install -e ".[contracts]"  (P1 contracts work)
#   pip install -e ".[ml]"         (P2 ML work)
#   pip install -e ".[soar]"       (P1 SOAR work)
#   pip install -e ".[ui]"         (P4 UI work)
#   pip install -e ".[dev]"        (everyone — tests + lint)
contracts = []  # solo pydantic (ya en core)
llm = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "tenacity>=8.2",
    "openai>=1.0",          # ADR-0001 v2 primary
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]
ml = [
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "pandas>=2.2",
    "redis>=5.0",
    "joblib>=1.3",
]
soar = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "redis>=5.0",
    "apscheduler>=3.10",
    "pyjwt>=2.8",
    "jinja2>=3.1",
    "python-telegram-bot>=21.0",     # ADR-0007 v2 primary
    "discord-webhook>=1.3",          # ADR-0007 v2 visibility
    "twilio>=9.0",                   # ADR-0007 v2 escalation
    "python-multipart>=0.0.9",       # FastAPI Form() en Approval API (§2.6)
    "psycopg[binary]>=3.1",          # sink SQL del audit -> Postgres argos_audit (ADR-0013 §2.8)
]
ui = [
    "streamlit>=1.30",
    "streamlit-autorefresh>=1.0",
    "redis>=5.0",
    "plotly>=5.19",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",          # mock para httpx
    "fakeredis>=2.20",
    "hypothesis>=6.100",
    "mypy>=1.9",
    "ruff>=0.4",
    "coverage>=7.4",
    "pyyaml>=6.0",          # detection/deception tests parsean Sigma/canary YAML
    "openpyxl>=3.1",        # deception generator crea xlsx canary dummy
]

[project.urls]
Homepage = "https://github.com/EnzoOrdonez/argos"
Repository = "https://github.com/EnzoOrdonez/argos"
"Bug Tracker" = "https://github.com/EnzoOrdonez/argos/issues"

# ----------------------------------------------------------------------
# Tooling configuration
# ----------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["argos_contracts*", "llm_triage*", "soar*", "ml*"]
exclude = ["tests*", "docs*", "lab*", "evaluation*", "attack-simulation*"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "build", "dist", "lab/.vagrant"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "S", "C4", "SIM", "RUF"]
ignore = ["S101"]  # pytest assert OK

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S", "B"]

# ml/tests corre aparte (deps pesadas sklearn/scipy, evita error de coleccion en envs sin [ml]):
#   pip install -e ".[ml]" && pytest ml/tests
# detection/deception SI van en testpaths (deps livianas: pyyaml/openpyxl en [dev]).
# soar/response/forensics/tests: PENDIENTE definir dueño (modulo forense ajeno en namespace soar/)
#   + alinear datetime.UTC->timezone.utc (rompe en <3.11). Ver auditoria 2026-06-24.
[tool.pytest.ini_options]
testpaths = ["argos_contracts/tests", "llm_triage/tests", "soar/decision_engine/tests", "soar/notifications/tests", "soar/approval_api/tests", "soar/playbooks/tests", "soar/audit/tests", "detection/tests", "deception/tests", "scripts/tests", "bridge/tests", "active-response/tests", "console/tests", "deploy/tests"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["argos_contracts", "llm_triage", "soar"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Form", "fastapi.Query"]
